--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -49,7 +49,7 @@
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{TemplateForm.task}" value="#{item}"/>
                 <p:confirm header="#{msgs.deleteTask}?"
-                           message="#{msgs.sollDieserEintragWirklichGeloeschtWerden}"
+                           message="#{msgs.shouldItemBeRemoved}"
                            icon="ui-icon-alert"/>
             </p:commandLink>
         </p:column>
