--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -14,6 +14,7 @@
 <ui:composition
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:o="http://omnifaces.org/ui"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable id="taskTable" var="item" value="#{ProcessForm.process.tasks}" sortBy="#{item.ordering}">
@@ -117,12 +118,4 @@
         </p:rowExpansion>
 
     </p:dataTable>
-
-    <p:commandButton action="#{ProcessForm.newTask}"
-                     value="#{msgs.taskAdd}"
-                     rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('addTask',item.process.project.client.id,item.process.project.id)}"
-                     icon="fa fa-plus-circle fa-lg"
-                     iconPos="right"
-                     styleClass="callto m-1em"
-                     id="addStepButton"/>
 </ui:composition>
