Add diagram image to task list in process edit view + fix in template edit view

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -118,4 +118,6 @@
         </p:rowExpansion>
 
     </p:dataTable>
+
+    <o:graphicImage rendered="#{ProcessForm.process.template.workflow ne null}" value="#{ProcessForm.tasksDiagram}" dataURI="true" />
 </ui:composition>
