--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -86,5 +86,5 @@
 
     </p:dataTable>
 
-    <o:graphicImage rendered="#{item.template.workflow ne null}" value="#{TemplateForm.tasksDiagram}" dataURI="true" />
+    <o:graphicImage rendered="#{TemplateForm.template.workflow ne null}" value="#{TemplateForm.tasksDiagram}" dataURI="true" />
 </ui:composition>
