Fix size of legal text dialogs

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/legal.xhtml
@@ -22,6 +22,8 @@
                   styleClass="legal-dialog"
                   widgetVar="imprintDialog"
                   header="#{msgs.imprint}"
+                  width="640"
+                  height="480"
                   modal="true">
             <h:outputText id="imprintText"
                           value="#{LegalTexts.imprintText}"
@@ -32,6 +34,8 @@
                   styleClass="legal-dialog"
                   widgetVar="dataPrivacyDialog"
                   header="#{msgs.dataPrivacy}"
+                  width="640"
+                  height="480"
                   modal="true">
             <h:outputText id="dataPrivacyText"
                           value="#{LegalTexts.dataPrivacyText}"
@@ -42,6 +46,8 @@
                   styleClass="legal-dialog"
                   widgetVar="termsOfUseDialog"
                   header="#{msgs.termsOfUse}"
+                  width="640"
+                  height="480"
                   modal="true">
             <h:outputText id="termsOfUseText"
                           value="#{LegalTexts.termsOfUseText}"
