Fix display of images in detail view

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1166,6 +1166,19 @@ Column content
     margin-left: 5px;
 }
 
+#galleryWrapperPanel,
+#galleryWrapperPanel_content {
+    height: 100%;
+}
+
+#thumbnailStripe > div {
+    text-align: center;
+}
+
+#thumbnailStripe a {
+    display: inline-block;
+}
+
 .thumbnail {
     height: 60px;
     border: 1px solid black;
