--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -114,13 +114,15 @@
             <ui:fragment rendered="#{Metadaten.viewMode eq 'preview' and Metadaten.imageListExistent}">
                 <!-- OpenLayers Kitodo custom controls -->
                 <div id="olWrapper" style="overflow-x: auto; height: 100%">
-                    <div id="thumbnailStripe" style="width: 10%; display: inline-block; float: right">
+                    <div id="thumbnailStripe" style="width: 100px; display: inline-block; float: right">
                         <ui:repeat value="#{Metadaten.images}" var="image">
-                            <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
-                                <!-- outputText is needed to remove whitespace produced by correct code indent -->
-                                <h:outputText><img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/></h:outputText>
-                                <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
-                            </p:commandLink>
+                            <div>
+                                <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
+                                    <!-- outputText is needed to remove whitespace produced by correct code indent -->
+                                    <h:outputText><img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/></h:outputText>
+                                    <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
+                                </p:commandLink>
+                            </div>
                             <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
                             <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
                         </ui:repeat>
@@ -128,7 +130,7 @@
                     <ui:fragment rendered="#{Metadaten.isAccessGranted(Metadaten.currentImage)}">
                         <h:outputStylesheet name="webjars/openlayers/4.5.0/ol.css"/>
                         <h:outputScript name="js/ol_custom.js"/>
-                        <div id="map" class="map" style="width: 85%; height: 100%; display: inline-block; float: left"/>
+                        <div id="map" class="map" style="width: calc(100% - 100px); height: 100%; display: inline-block; float: left"/>
                     </ui:fragment>
                 </div>
             </ui:fragment>
