--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
@@ -43,7 +43,7 @@
                                rendered="#{(item.processingStatus == 'OPEN' and !item.batchStep) || (item.processingStatus == 'OPEN' and item.batchStep and !item.batchAvailable)}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <i class="fa fa-bell-o"/>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}" />
+                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
                 <!-- already assigned task (this user) -->
                 <h:link outcome="/pages/currentTasksEdit"
@@ -57,7 +57,7 @@
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and (!item.batchStep || !item.batchAvailable)}"
                                title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                     <i class="fa fa-bell-slash"/>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}" />
+                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- take over batch -->
@@ -65,7 +65,7 @@
                                rendered="#{item.processingStatus == 'OPEN' and item.batchStep and item.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3a.gif" alt="edit"/>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}" />
+                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (this user) -->
@@ -73,7 +73,7 @@
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}" />
+                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (different user) -->
@@ -81,9 +81,42 @@
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                     <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}" />
+                    <f:setPropertyActionListener value="#{item.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
             </h:form>
         </p:column>
     </p:dataTable>
+
+    <h:panelGrid columns="1">
+        <h:panelGroup>
+            <h3>
+                <h:outputText value="#{msgs.filterAdjust}"/>
+            </h3>
+
+            <h:form>
+                <h:panelGrid columns="2" style="margin-left:20px">
+                    <h:outputText value="#{msgs.showAutomaticTasks}:"/>
+                    <h:selectBooleanCheckbox id="showAutomaticTasks" value="#{CurrentTaskForm.showAutomaticTasks}"
+                                             style="margin-right:20px"/>
+
+                    <h:outputText value="#{msgs.hideCorrectionTasks}:"/>
+                    <h:selectBooleanCheckbox id="hideCorrectionTasks" value="#{CurrentTaskForm.hideCorrectionTasks}"
+                                             style="margin-right:20px"/>
+
+
+                    <h:outputText value="#{msgs.showOnlyOwnTasks}:"/>
+                    <h:selectBooleanCheckbox id="onlyOwnTasks" value="#{CurrentTaskForm.onlyOwnTasks}"
+                                             style="margin-right:20px"/>
+
+                    <h:outputText value="#{msgs.showOnlyOpenTasks}:"/>
+                    <h:selectBooleanCheckbox id="onlyOpenTasks" value="#{CurrentTaskForm.onlyOpenTasks}"
+                                             style="margin-right:20px"/>
+                </h:panelGrid>
+
+                <h:commandLink update="tasksTabView:taskTable" style="margin-left:24px" title="#{msgs.apply}">
+                    <h:outputText value="#{msgs.apply}"/>
+                </h:commandLink>
+            </h:form>
+        </h:panelGroup>
+    </h:panelGrid>
 </ui:composition>
