Fix navigation link in extended search and cleanup code

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -930,6 +930,10 @@ main i.fa {
     background: transparent;
 }
 
+.extended-search-input-field {
+    width: 100%;
+}
+
 /*----------------------------------------------------------------------
 Metadata Editor
 ----------------------------------------------------------------------*/
