--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -29,7 +29,7 @@
         <p:column headerText="#{msgs.actions}" id="taskActions" styleClass="actionsColumn task-table-column">
             <h:form id="actionForm">
                 <h:link outcome="taskEdit" id="editTask"
-                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',task.process.project.client.id, task.process.project.id)}"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editTask',task.process.project.client.id)}"
                         title="#{msgs.detailsDesSchritts}">
                     <f:param name="referer" value="desktop"/>
                     <f:param name="id" value="#{task.id}"/>
