--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -69,28 +69,28 @@
                             </li>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.hasAuthorityForAny('viewAllTasks')}">
+                                rendered="#{SecurityAccessController.hasAuthorityGlobalOrForAnyClient('viewAllTasks')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.tasks}" id="linkTasks"
                                                                  outcome="tasks"><i
                                     class="fa fa-bell fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.hasAuthorityForAny('viewAllProcesses')}">
+                                rendered="#{SecurityAccessController.hasAuthorityGlobalOrForAnyClient('viewAllProcesses')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.processes}" id="linkProcesses"
                                                                  outcome="processes"><i
                                     class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.hasAnyAuthorityForAny('viewAllProjects, viewAllDockets')}">
+                                rendered="#{SecurityAccessController.hasAnyAuthorityGlobalOrForAnyClient('viewAllProjects, viewAllTemplates, viewAllWorkflows, viewAllDockets, viewAllRulestes')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.projects}" id="linkProjects"
                                                                  outcome="projects"><i
                                     class="fa fa-folder-open fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups, viewAllClients, viewAllLdapGroups')}">
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityGlobalOrForAnyClient('viewAllUsers, viewAllUserGroups, viewAllClients, viewAllLdapGroups')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.user}" id="linkUsers" outcome="users"><i
                                     class="fa fa-user fa-lg"/></h:link></li>
                             </h:panelGroup>
