--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
@@ -123,6 +123,28 @@
                         <f:param name="zurueck" value="AktuelleSchritteBearbeiten"/>
                     </h:commandLink>
 
+                    <!-- Re-generate all images button -->
+                    <h:commandLink id="action12"
+                                   rendered="#{not empty task.generators and process.blockedUser == null}"
+                                   action="#{CurrentTaskForm.regenerateAllImagesButtonClick}"
+                                   title="#{msgs.regenerateAllImages}">
+                        <h:outputText><i class="fa fa-cog"/> #{msgs.regenerateAllImages}</h:outputText>
+                    </h:commandLink>
+                    <!-- Re-generate missing and damaged images button -->
+                    <h:commandLink id="action16"
+                                   rendered="#{not empty task.generators and process.blockedUser == null}"
+                                   action="#{CurrentTaskForm.regenerateMissingAndDamagedImagesButtonClick}"
+                                   title="#{msgs.regenerateMissingAndDamagedImages}">
+                        <h:outputText><i class="fa fa-cog"/> #{msgs.regenerateMissingAndDamagedImages}</h:outputText>
+                    </h:commandLink>
+                    <!-- Re-generate missing images button -->
+                    <h:commandLink id="action17"
+                                   rendered="#{not empty task.generators and process.blockedUser == null}"
+                                   action="#{CurrentTaskForm.generateMissingImagesButtonClick}"
+                                   title="#{msgs.generateMissingImages}">
+                        <h:outputText><i class="fa fa-cog"/> #{msgs.generateMissingImages}</h:outputText>
+                    </h:commandLink>
+
                     <!-- Edit Cancel-buttons -->
                     <h:commandLink id="action11" action="#{CurrentTaskForm.schrittDurchBenutzerZurueckgeben}"
                                    title="#{msgs.releaseTask}"
