Rename password field to passwordToEncrypt + remove sonarcloud warning for plain string as password

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditChangePasswordPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditChangePasswordPopup.xhtml
@@ -31,7 +31,7 @@
                                 <!-- new password -->
                                 <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
                                 <p:password redisplay="true" id="newPassword" class="password"
-                                            value="#{UserForm.password}" label="#{msgs.newPassword}"
+                                            value="#{UserForm.passwordToEncrypt}" label="#{msgs.newPassword}"
                                             match="newPasswordRepeat" required="true"
                                             validatorMessage="#{msgs.passwordsDontMatch}"/>
                             </div>
@@ -40,7 +40,7 @@
                                 <!-- repeat new password -->
                                 <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
                                 <p:password redisplay="true" id="newPasswordRepeat" class="password"
-                                            value="#{UserForm.password}" label="#{msgs.confirmNewPassword}"
+                                            value="#{UserForm.passwordToEncrypt}" label="#{msgs.confirmNewPassword}"
                                             required="true"/>
                             </div>
                             <div>
