Hide My tasks panel

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -38,9 +38,9 @@
         <section id="portal-nav">
             <nav id="header-nav" role="navigation">
                 <ul id="menu">
-                    <li>
+                    <!--<li>-->
                         <!-- List: my tasks -->
-                        <c:set var="tasks" value="#{CurrentTaskForm.tasksInProgress}"/>
+                        <!--<c:set var="tasks" value="#{CurrentTaskForm.tasksInProgress}"/>
                         <a href="#"><i class="fa fa-bell-o fa-lg"/>
                             <h:panelGroup rendered="#{tasks.size() gt 0}"
                                           styleClass="batch-count bc-alert">#{tasks.size()}</h:panelGroup>
@@ -54,7 +54,7 @@
                             </ui:repeat>
                             <li><h:link outcome="tasks" value="#{msgs.allMyTasks} (#{tasks.size()})"/></li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li>
                         <!-- Dashboard menu -->
                         <a href="#" id="dashboard-menu"><i class="fa fa-th fa-lg"/></a>
