Update the whole task table for change task status up - when one task is set up to done, next one is set up to open

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -52,7 +52,7 @@
                                      id="taskStatusUp"
                                      title="#{msgs.statusHoeherSetzen}"
                                      oncomplete="toggleSave()"
-                                     update="statusColumn"
+                                     update="taskTable"
                                      icon="fa fa-long-arrow-right"
                                      styleClass="ui-button-small">
                         <f:setPropertyActionListener target="#{ProcessForm.task}" value="#{item}"/>
